# firefly-zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
.github/workflows/: build.yml
api/: generate.sh
api/protobuf/: hardware.proto  options.proto  plugin_c.py  plugin_python.py  plugin_swift.py  rtc.proto  stream.proto  ux.proto
api/python/: delta.py  firefly_hardware_v1_hardware_pb2.py  firefly_rtc_v1_rtc_pb2.py  firefly_ux_v1_ux_pb2.py  hardware_pb2.py  options_pb2.py  rpc.py  rtc_pb2.py  set_rtc.py  stream_pb2.py  ux_pb2.py
applications/blinky/: CMakeLists.txt  README.md  custom-sections.ld  linker.ld  prj.conf  update.py
applications/blinky/src/: executable_metadata.c
applications/boot/: CMakeLists.txt  README.md  prj.conf
applications/boot/blinky/: README.md  custom-sections.ld  linker.ld  prj.conf  update.py
applications/boot/blinky/src/: executable_metadata.c  main.c
applications/boot/split/: README.md
applications/boot/split/controller/: CMakeLists.txt  README.md  prj.conf
applications/boot/split/controller/src/: main.c  update.c  update.h
applications/boot/split/controller_i2c/: CMakeLists.txt  README.md  prj.conf
applications/boot/split/controller_i2c/src/: main.c
applications/boot/split/peripheral/: CMakeLists.txt  README.md  app.overlay  prj.conf
applications/boot/split/peripheral/src/: main.c
applications/boot/src/: main.c
applications/boot/usb/: CMakeLists.txt  prj.conf
applications/boot/usb/src/: main.c
applications/watch/: CMakeLists.txt  adafruit_feather_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
applications/watch/src/: fd_watch.c  fd_watch_screen_powering_off.c  fd_watch_screen_splash.c  fd_watch_screen_time.c  main.c
subsys/: CMakeLists.txt  Kconfig
zephyr/: module.yml
(+363 files in other folders)
